--- a/bookquinn/jsconfig.json
+++ b/bookquinn/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/components/CV": ["./app/components/CV.js"] // Add the correct path for the missing file
     }
   }
 }
